// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile m huge 1`] = `
<style>
.S1 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  line-height: 24px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Regular;
}

.IS1 {
  color: rgba(29,29,27,1.00);
  font-size: 24px;
  margin-bottom: 10px;
  margin-top: 30px;
  text-align: center;
}

.IS2 {
  font-size: 16px;
  line-height: 19px;
  padding-bottom: 5px;
  text-align: center;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "60px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-lineHeight-135wba7 IS1 S1"
      role="heading"
    >
      Driving Off
    </h3>
    <h4
      aria-level="4"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 IS2 S2"
      role="heading"
    >
      Three Conservative MPs resign
    </h4>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m medium 1`] = `
<style>
.S1 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Regular;
}

.IS1 {
  color: rgba(29,29,27,1.00);
  font-size: 20px;
  line-height: 20px;
  margin-top: 30px;
  text-align: center;
}

.IS2 {
  font-size: 16px;
  line-height: 19px;
  padding-bottom: 5px;
  text-align: center;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "30px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S1"
      role="heading"
    >
      Driving Off
    </h3>
    <h4
      aria-level="4"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 IS2 S2"
      role="heading"
    >
      Three Conservative MPs resign
    </h4>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m small 1`] = `
<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S2 {
  color: rgba(105,105,105,1.00);
}

.IS1 {
  font-size: 20px;
  line-height: 20px;
  margin-top: 20px;
  text-align: center;
}

.IS2 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14px;
  line-height: 20px;
  padding-right: 40px;
  padding-left: 40px;
  text-align: center;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS3"
  >
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S1"
      role="heading"
    >
      Driving Off
    </h3>
    <h4
      aria-level="4"
      className="css-reset-4rbku5 css-text-901oao r-color-1khp51w r-paddingBottom-1mi0q7o IS2 S2"
      role="heading"
    >
      Three Conservative MPs resign
    </h4>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m wide 1`] = `
<style>
.S1 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  line-height: 24px;
  margin-bottom: 5px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Regular;
}

.IS1 {
  color: rgba(29,29,27,1.00);
  font-size: 24px;
  margin-top: 30px;
  text-align: center;
}

.IS2 {
  font-size: 16px;
  line-height: 19px;
  padding-bottom: 5px;
  text-align: center;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "60px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-lineHeight-135wba7 r-marginBottom-d0pm55 IS1 S1"
      role="heading"
    >
      Driving Off
    </h3>
    <h4
      aria-level="4"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 IS2 S2"
      role="heading"
    >
      Three Conservative MPs resign
    </h4>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m without breakpoint should be like small 1`] = `
<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S2 {
  color: rgba(105,105,105,1.00);
}

.IS1 {
  font-size: 20px;
  line-height: 20px;
  margin-top: 20px;
  text-align: center;
}

.IS2 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14px;
  line-height: 20px;
  padding-right: 40px;
  padding-left: 40px;
  text-align: center;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS3"
  >
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S1"
      role="heading"
    >
      Driving Off
    </h3>
    <h4
      aria-level="4"
      className="css-reset-4rbku5 css-text-901oao r-color-1khp51w r-paddingBottom-1mi0q7o IS2 S2"
      role="heading"
    >
      Three Conservative MPs resign
    </h4>
    <ArticleFlags />
  </div>
</Link>
`;
